They can be automatically created from within the Crate Mod Loader, or manually using Octodiff's 1.2.1 version.
The advantage to using them is a lower file size of Mod Crates, the downside being incompatibility between different versions of the same game file.

New games supported:
- Worms Forts: Under Siege (PS2)  
- Super Monkey Ball Adventure (PSP)  
  
Crash Twinsanity
- Improved feature compatibility with added/modded levels in Mod Crates

Rayman 3: Hoodlum Havoc
- Crate Mod Loader info is now displayed ingame. (Title screen)  

Crash Bandicoot
- New: Enable Unused Enemies
- New: Randomize Level Order
- New: Add Stormy Ascent
- New: Randomize Music Tracks

Crash Bandicoot 2: Cortex Strikes Back, Crash Bandicoot: WARPED
- New: All Crates Are Covered Up
- New: Randomize Music Tracks
- Randomize World Textures: Fixed not being able to use this feature

Crash Bandicoot: The Wrath Of Cortex
- Crate Mod Loader info is now displayed ingame. (Options screen)  

CTR: Crash Team Racing
- New: All Wooden Crates Are Wumpa Crates
- New: Randomize Crate Effects
- New: Random/All Tracks Have Moon Gravity
- New: Random Tracks Have Ice Physics
- New: Driving Offroad Respawns The Driver
- New: Randomize World Palette
- Updated CTR Framework API (existing Mod Crates may need to be updated due to extraction file name changes)

Crash of the Titans
- New: Randomize Costume Visuals
- New: Randomize Cutscene Costumes
- Crate Mod Loader info is now displayed ingame. (Credits screen)

Crash Mind Over Mutant
- New: Randomize Costume Visuals  

1.3.0

General
- PS2 ROM building is now supported internally (Thanks to Smartkin). 
- Options are now handled the same as Mod Menu properties allowing them to be set by Mod Crates and enabling variations and choices like difficulty settings in Mod Menus.  
- Select games' data can now be preloaded allowing an extended Mod Menu+.

New games supported:
- Crash Bandicoot: The Wrath Of Cortex (PS2)

Crash Nitro Kart